--- a/index.html
+++ b/index.html
@@ -22,6 +22,7 @@
     <link rel="stylesheet" type="text/css" href="./css/font-awesome.min.css" />
     <link rel="stylesheet" type="text/css" href="./css/et-line.min.css" />
 
+	<link rel="preload" href="img/agence-la-panthere.webp" as="image">
 
     <title>Entreprise de web design La Panthère à Lyon</title>
   </head>
@@ -170,7 +171,7 @@
 		</div>
 		<div class="row tight-width-whitespace portfolio-row">
 			<div class="col-sm-6">
-				<a href="#" data-lightbox="img/1.webp" data-gallery-id="gallery-1" data-caption="Refonte d'un site web pour un journal local" data-frame="snapshot-lb"><img src="img/1.webp" alt="" class="img-responsive portfolio-thumb" /></a>
+				<a href="#" data-lightbox="img/1.webp" data-gallery-id="gallery-1"  data-frame="snapshot-lb"><img src="img/1.webp" loading="lazy" alt="" class="img-responsive portfolio-thumb" /></a>
 				<h2 class="mg-md text-center">
 					Refonte d'un site web pour un journal local
 				</h2>
@@ -179,7 +180,7 @@
 				</p>
 			</div>
 			<div class="col-sm-6">
-				<a href="#" data-lightbox="img/2.webp" data-gallery-id="gallery-1" data-caption="Création d'un site web pour photographes" data-frame="snapshot-lb"><img src="img/2.webp" class="img-responsive portfolio-thumb" alt="" /></a>
+				<a href="#" data-lightbox="img/2.webp" data-gallery-id="gallery-1" data-caption="Création d'un site web pour photographes" data-frame="snapshot-lb"><img src="img/2.webp" loading="lazy" class="img-responsive portfolio-thumb" alt="" /></a>
 				<h2 class="mg-md text-center">
 					Création d'un site web pour photographes
 				</h2>
@@ -190,7 +191,7 @@
 		</div>
 		<div class="row tight-width-whitespace portfolio-row">
 			<div class="col-sm-6">
-				<a href="#" data-lightbox="img/3.webp" data-gallery-id="gallery-1" data-caption="Création d'un site internet pour un voyageur" data-frame="snapshot-lb"><img src="img/3.webp" class="img-responsive portfolio-thumb" alt=""/></a>
+				<a href="#" data-lightbox="img/3.webp" data-gallery-id="gallery-1" data-caption="Création d'un site internet pour un voyageur" data-frame="snapshot-lb"><img src="img/3.webp" loading="lazy" class="img-responsive portfolio-thumb" alt=""/></a>
 				<h2 class="mg-md text-center">
 					Création d'un site internet pour un voyageur
 				</h2>
@@ -199,7 +200,7 @@
 				</p>
 			</div>
 			<div class="col-sm-6">
-				<a href="#" data-lightbox="img/4.webp" data-gallery-id="gallery-1" data-caption="Conception d'un site pour une agence de mariage" data-frame="snapshot-lb"><img src="img/4.webp" class="img-responsive portfolio-thumb" alt="" /></a>
+				<a href="#" data-lightbox="img/4.webp" data-gallery-id="gallery-1" data-caption="Conception d'un site pour une agence de mariage" data-frame="snapshot-lb"><img src="img/4.webp" loading="lazy" class="img-responsive portfolio-thumb" alt="" /></a>
 				<h2 class="mg-md text-center">
 					Conception d'un site pour une agence de mariage
 				</h2>
@@ -269,15 +270,15 @@
 
 </div>
 <!-- Principal conteneur END -->
+<script src="https://code.jquery.com/jquery-2.1.0.min.js" integrity="sha256-8oQ1OnzE2X9v4gpRVRMb1DWHoPHJilbur1LP9ykQ9H0=" crossorigin="anonymous"></script>
+   <!-- <script src="./js/jquery-2.1.0.min.js" ></script> -->
+   <!-- <script src="./js/bootstrap.min.js" ></script> -->
 
-   <script src="./js/jquery-2.1.0.js" ></script>
-   <script src="./js/bootstrap.min.js" ></script>
-
-    <!-- <script
-      *src*="<https://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/js/bootstrap.min.js>"
-    ></script> -->
+    <script
+      src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/js/bootstrap.min.js" 
+    ></script>
     <script src="./js/blocs.js"></script>
-    <script src="./js/jquery.touchSwipe.js" defer></script>
-    <script src="./js/gmaps.min.js"></script>
+    <script src="./js/jquery.touchSwipe.min.js" defer></script>
+    <script src="./js/gmaps.min.js" defer></script>
   </body>
 </html>
