--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
     <!-- <link rel="stylesheet" type="text/css" href="bootstrap.min.css" /> -->
 
     <link rel="stylesheet" type="text/css" href="style.min.css" />
-    <link rel="stylesheet" type="text/css" href="./css/font-awesome.min.css" />
+    <link rel="stylesheet" type="text/css" href="./css/font-awesome-pure.css" />
     <link rel="stylesheet" type="text/css" href="./css/et-line.min.css" />
 
 	<link rel="preload" href="img/agence-la-panthere.webp" as="image">
