--- a/lapanthere_web_design_lyon_contact.html
+++ b/lapanthere_web_design_lyon_contact.html
@@ -10,7 +10,7 @@
     
 	<link rel="stylesheet" type="text/css" href="./css/bootstrap.min.css">
 	<link rel="stylesheet" type="text/css" href="style.min.css">
-	<link rel="stylesheet" type="text/css" href="./css/font-awesome.min.css">
+	<link rel="stylesheet" type="text/css" href="./css/font-awesome-pure.css">
 	<link rel="stylesheet" type="text/css" href="./css/et-line.min.css">
 	
 	<link rel="preload" href="img/agence-la-panthere-monochrome.svg" as="image">
@@ -18,12 +18,6 @@
 	
 
 
-	<script src="https://code.jquery.com/jquery-2.1.0.min.js" integrity="sha256-8oQ1OnzE2X9v4gpRVRMb1DWHoPHJilbur1LP9ykQ9H0=" crossorigin="anonymous"></script>
-    <script
-      src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/js/bootstrap.min.js" defer></script>
-	<script src="./js/blocs.min.js" ></script>
-	<script src="./js/jqBootstrapValidation.min.js" defer></script>
-	<script src="./js/formHandler.js" ></script>
 	
     <title>Entreprise de web design La Panthère à Lyon</title>
 
@@ -173,7 +167,13 @@
 
 </div>
 <!-- Principal conteneur END -->
-    
+<script src="https://code.jquery.com/jquery-2.1.0.min.js" integrity="sha256-8oQ1OnzE2X9v4gpRVRMb1DWHoPHJilbur1LP9ykQ9H0=" crossorigin="anonymous"></script>
+<script
+  src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/js/bootstrap.min.js" defer></script>
+<script src="./js/blocs.min.js" ></script>
+<script src="./js/jqBootstrapValidation.min.js" defer></script>
+<script src="./js/formHandler.js" ></script>
+
 
 </body>
 </html>
